--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ eventuateMavenRepoUrl=file:///Users/cer/.m2/testdeploy,https://snapshots.reposit
 
 springBootVersion=2.1.1.RELEASE
 
-eventuateUtilVersion=0.14.0.BUILD-SNAPSHOT
-eventuateMessagingPartitionManagementVersion=0.11.0.BUILD-SNAPSHOT
-eventuateCommonVersion=0.15.0.BUILD-SNAPSHOT
+eventuateUtilVersion=0.13.0.RELEASE
+eventuateMessagingPartitionManagementVersion=0.10.0.RELEASE
+eventuateCommonVersion=0.14.0.RELEASE
 
-eventuatePluginsGradleVersion=0.10.0.BUILD-SNAPSHOT
-version=0.13.1.BUILD-SNAPSHOT
+eventuatePluginsGradleVersion=0.9.1.RELEASE
+version=0.13.0.RELEASE
