--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-XX:MaxPermSize=512m
 
-deployUrl=file:///Users/cer/.m2/testdeploy
+deployUrl=artifactregistry://asia-southeast2-maven.pkg.dev/digital-community-bank/mvn-public-repo
 bintrayRepoType=defineMe
 dockerImageTag=latest
 removeContainers=false
